--- a/Nuspec/Prig.nuspec
+++ b/Nuspec/Prig.nuspec
@@ -2,7 +2,7 @@
 <package >
   <metadata>
     <id>Prig</id>
-    <version>1.0.0</version>
+    <version>1.1.0</version>
     <title>Prig: Open Source Alternative to Microsoft Fakes</title>
     <authors>Akira Sugiura</authors>
     <owners>Akira Sugiura</owners>
@@ -17,7 +17,12 @@
     </description>
     <copyright>(c) 2014 Akira Sugiura. All rights reserved.</copyright>
     <tags>tdd isolation mock mocks mocking fake fakes faking unittest unittesting</tags>
-    <releaseNotes>Version 1.0.0
+    <releaseNotes>Version 1.1.0
+* Release 1.1.
+* 
+
+
+Version 1.0.0
 * Release 1.
 * Fixed #25: Default parameterized method can't call indirectly.
 
