--- a/Nuspec/Prig.nuspec
+++ b/Nuspec/Prig.nuspec
@@ -19,7 +19,10 @@
     <tags>tdd isolation mock mocks mocking fake fakes faking unittest unittesting</tags>
     <releaseNotes>Version 1.1.0
 * Release 1.1.
-* 
+* Fixed #26: Prig assembly shouldn't need InternalsVisibleToAttribute.
+* Fixed #27: Test stalled if adding the indirection settings for all members of DateTime.
+* Fixed #28: The indirect tests sometimes fail.
+* Supported the feature "Prig setup session" that makes adding the indirection stub settings more easier.
 
 
 Version 1.0.0
