Add Visual Studio Integrated Environment
* All: Updated README.md and NOTICE.md to describe new steps and dependencies.
* Chocolatey: Changed the package management system for Prig to Chocolatey from NuGet because I found that NuGet has the following issues when I was planning to support Visual Studio integrated environment:
  * The build events of `DTE` object can't be hooked from the Package Manager Console of NuGet.
    Visual Studio clears all environment variables every build-time. To continue attaching profiler, every build-time we have to reset the environment variable `COR_PROFILER`, `COR_ENABLE_PROFILING` and so on.
  * NuGet only supports the idempotence against a project.
    I think that using VSIX is a general way to support Visual Studio integrated environment. Unfortunately, VSIX doesn't support any additional script execution when install-time. It isn't satisfied the requirement that Prig needs the preparation like registering the profiler to the registry, registering the assembly to the GAC and so on. I planned to develop [Gall](https://github.com/urasandesu/Gall) to resolve the issue, but it can't make usage easy. Because they need idempotence against a machine, but NuGet only supports idempotence against a project.

  Chocolatey can resolve the above issues by containing VSIX/NuGet packages to itself. Also, I expect to continue using the dependency resolution feature that NuGet has.
* NuGet: Shrink the contents of package because they are moved to Chocolatey.
* VSIX: Added.
* Profiler: Added the features that determine the process that is attached to the profiler and the working directory of the profiler.
* CppAnonym: Merged the base enhancement.
* Swathe: Merged the base enhancement.

--- a/.gitignore
+++ b/.gitignore
@@ -54,9 +54,12 @@
 TemporaryGeneratedFile*
 *.g.cs
 *.g.csproj
+*.nupkg
+*.zip
 Debug/
 Debug(.NET 3.5)/
 Debug(.NET 4)/
 Release/
 Release(.NET 3.5)/
 Release(.NET 4)/
+packages/
