Review Project's Configuration
* Chocolatey: Modify the path to collect built deliverables.
* VSIX: Remove the strong name signature. As the following discussion, VSIX doesn't always need a strong name: [strongname - Do Visual Studio Extensions (VSIX) need to be strong named? - Stack Overflow](http://stackoverflow.com/questions/16447324/do-visual-studio-extensions-vsix-need-to-be-strong-named). About the dependency [ReactiveProperty](https://github.com/runceel/ReactiveProperty), I used the forked until now because it doesn't have strong name. However, I'm going to use the original from now on.

--- a/Chocolatey/Prig.nuspec
+++ b/Chocolatey/Prig.nuspec
@@ -74,7 +74,7 @@ About more previous versions, please see https://github.com/urasandesu/Prig/rele
     <file src="..\Release(.NET 3.5)\AnyCPU\Urasandesu.Prig.Framework.dll" target="lib\net35\" />
     <file src="..\Release(.NET 4)\AnyCPU\Urasandesu.NAnonym.dll" target="lib\net40\" />
     <file src="..\Release(.NET 4)\AnyCPU\Urasandesu.Prig.Framework.dll" target="lib\net40\" />
-    <file src="..\Release\AnyCPU\Prig.vsix" target="tools" />
+    <file src="..\Release\x86\Prig.vsix" target="tools" />
     <file src="..\NuGet\*.nupkg.zip" target="tools" />
     <file src="..\Release\x64\Urasandesu.Prig.dll" target="tools\x64\" />
     <file src="..\Release\x86\Urasandesu.Prig.dll" target="tools\x86\" />
