--- a/Chocolatey/Prig.nuspec
+++ b/Chocolatey/Prig.nuspec
@@ -2,7 +2,7 @@
 <package >
   <metadata>
     <id>Prig</id>
-    <version>2.0.0-alpha01</version>
+    <version>2.0.0-alpha02</version>
     <title>Prig: Open Source Alternative to Microsoft Fakes</title>
     <authors>Akira Sugiura</authors>
     <owners>Akira Sugiura</owners>
@@ -17,7 +17,12 @@
     </description>
     <copyright>(c) 2014 Akira Sugiura. All rights reserved.</copyright>
     <tags>tdd isolation mock mocks mocking fake fakes faking unittest unittesting</tags>
-    <releaseNotes>Version 2.0.0-alpha01
+    <releaseNotes>Version 2.0.0-alpha02
+* Fixed #29: Support Chocolatey v0.9.9.
+* 
+
+
+Version 2.0.0-alpha01
 * [NOTICE] Changed the package management system to Chocolatey from NuGet.
 * [NOTICE] Supported Visual Studio integrated environment.
 
@@ -54,6 +59,9 @@ Version 0.0.0-alpha9
 
 About more previous versions, please see https://github.com/urasandesu/Prig/releases.
     </releaseNotes>
+    <dependencies>
+      <dependency id="nuget.commandline" version="2.8.3" />
+    </dependencies> 
   </metadata>
   <files>
     <file src="..\Release(.NET 3.5)\AnyCPU\Urasandesu.NAnonym.dll" target="lib\net35\" />
