--- a/NuGet/Prig.nuspec
+++ b/NuGet/Prig.nuspec
@@ -2,7 +2,7 @@
 <package >
   <metadata>
     <id>Prig</id>
-    <version>2.0.0-alpha01</version>
+    <version>2.0.0-alpha02</version>
     <title>Prig: Open Source Alternative to Microsoft Fakes</title>
     <authors>Akira Sugiura</authors>
     <owners>Akira Sugiura</owners>
@@ -17,7 +17,12 @@
     </description>
     <copyright>(c) 2014 Akira Sugiura. All rights reserved.</copyright>
     <tags>tdd isolation mock mocks mocking fake fakes faking unittest unittesting</tags>
-    <releaseNotes>Version 2.0.0-alpha01
+    <releaseNotes>Version 2.0.0-alpha02
+* Fixed #29: Support Chocolatey v0.9.9.
+* 
+
+
+Version 2.0.0-alpha01
 * [NOTICE] Changed the package management system to Chocolatey from NuGet.
 * [NOTICE] Supported Visual Studio integrated environment.
 
