Reorganize Vendor Branch, Implement Copy Processing for Private Assemblies and Subcommands
* All: Remove the submodule for NUnit Test Adapter. It was merged as Vendor Branch, but now it is no longer needed. Also, modified build scripts according to that.
* CppAnonym: Merge the enhancements.
* Chocolatey: Embed prig subcommands to install/uninstall scripts. Remove the processing to collect the binaries for NUnit Test Adapter. Move the timing that packages NuGet to the install-time from the build-time. We must now specify real files to the *.nuspec. However, if doing it at the build-time, the problem that unneeded *.nupkg size increases will occur.
* NuGet: Removed because it was merged into Chocolatey.
* prig: Implement the following subcommands: `install`, `list`, `update`, `uninstall`.
* VSIX: Fix some build errors.
* Profiler: Correct the issue that the cached indirection delegates aren't used. Refactoring the processing that handles configuration file.

--- a/Urasandesu.Prig/Urasandesu.Prig.vcxproj.filters
+++ b/Urasandesu.Prig/Urasandesu.Prig.vcxproj.filters
@@ -652,6 +652,12 @@
     <ClCompile Include="..\CppAnonym\Urasandesu.CppAnonym\Urasandesu\CppAnonym\Xml.cpp">
       <Filter>Source Files\Urasandesu\CppAnonym</Filter>
     </ClCompile>
+    <ClCompile Include="..\CppAnonym\Urasandesu.CppAnonym\Urasandesu\CppAnonym\IO.cpp">
+      <Filter>Source Files\Urasandesu\CppAnonym</Filter>
+    </ClCompile>
+    <ClCompile Include="..\CppAnonym\Urasandesu.CppAnonym\Urasandesu\CppAnonym\Json.cpp">
+      <Filter>Source Files\Urasandesu\CppAnonym</Filter>
+    </ClCompile>
   </ItemGroup>
   <ItemGroup>
     <ClInclude Include="stdafx.h">
