Divide Integration Test Project
* All: Divide the test project that is used at integration test, because it is easier that running the Chocolatey installation script than preparing the test environment manually. Revert Vendor Branch, because it causes app crash. I still haven't been able to understand the behavior of `TestDomain`... Remove the indirection stub setting for `MemoryStream.CanSeek`, because it causes the test runner crash. However, it was no longer used originally. So, I guess that it will not cause other problems.
* Framework: Improve multi-thread safety.
* Profiler: A regression bug is occurred by [the previous modification](https://github.com/urasandesu/Prig/commit/6dd7c2ec0591a2a48b5bd7a632bf8524784a40d4#diff-f5f05d0f759975ad3a69234d1de8983fR879). Remove unneeded processes and comments.

--- a/.gitmodules
+++ b/.gitmodules
@@ -7,3 +7,6 @@
 [submodule "Swathe"]
 	path = Swathe
 	url = git@github.com:urasandesu/Swathe.git
+[submodule "NUnitTestAdapter"]
+	path = NUnitTestAdapter
+	url = git@github.com:urasandesu/nunit-vs-adapter.git
