--- a/Chocolatey/Prig.nuspec
+++ b/Chocolatey/Prig.nuspec
@@ -2,7 +2,7 @@
 <package >
   <metadata>
     <id>Prig</id>
-    <version>2.0.0-alpha033</version>
+    <version>2.0.0-alpha04</version>
     <title>Prig: Open Source Alternative to Microsoft Fakes</title>
     <authors>Akira Sugiura</authors>
     <owners>Akira Sugiura</owners>
@@ -18,19 +18,19 @@
     </description>
     <copyright>(c) 2014 Akira Sugiura. All rights reserved.</copyright>
     <tags>tdd isolation mock mocks mocking fake fakes faking unittest unittesting</tags>
-    <releaseNotes>Version 2.0.0-alpha033
-* 
-
-
-Version 2.0.0-alpha032
+    <releaseNotes>Version 2.0.0-alpha04
+* Update NUnit Test Adapter for Prig from based on 1.2.0 to based on 2.0.0.
+* [BREAKING CHANGE] To fix the following issues, alpha04 has lost compatibility with alpha03. Also, `choco upgrade` command cannot even work. I will publish the migration steps in [this page](https://github.com/urasandesu/Prig.V2Docs/wiki/Migration-from-alpha03-to-alpha04) as soon as possible.
+* Fixed #41: Error in remove prig assembly
+* Fixed #40: Test engine crashes while trying to execute a unit test without indirections context even when it doesn't use any stubs
+* Fixed #37: Suggestion add prig files as Copy If Newer to output directory
+* Fixed #33: Make framework assemblies private.
+* Implemented Experimentally #31: Issue with out parameters
 * Merge Infrastructure Enhancement(See also Swathe issues [#1](https://github.com/urasandesu/Swathe/issues/1))
 * Fixed #36: If an assembly is added-removed multiple times there is duplicated prebuild steps
 * Fixed #35: Rebuilding after .prig file had types removed still contains removed types in prig assembly
 * Fix error when enabling Test Adapter and no vstest running
 * Fix more generation issues
-
-
-Version 2.0.0-alpha031
 * Response to Strange Behavior. Depending on the replacing method, the static method of the infrastructure is sometimes called before initializing the field of the type. For example, you will find the behavior if you try [a sample of Generics](https://github.com/urasandesu/Prig/wiki/Generics) with [Prig v2.0.0-alpha03](https://github.com/urasandesu/Prig/releases/tag/v2.0.0-alpha03) in Visual Studio integrated environment. It seems very strange behavior, but we have to consider that in this layer.
 
 
@@ -68,15 +68,6 @@ Version 0.0.0-alpha10
 * [NOTICE] Changed the generated stub's API. It became that the indirection stubs and proxies are generated ALWAYS(overwrite). Until now, it no longer generates stubs and proxies after it generated them once.
 
 
-Version 0.0.0-alpha9
-* Pre-release 9.
-* Fixed #16: Nested Type can't be resolved in its indirection stub.
-* Fixed #17: Prig can't uninstall correctly against the solution that contains multiple test projects.
-* Fixed #18: `Get-IndirectionStubSetting` generates invalid alias against explict implemented interface.
-* Fixed #19: `Find-IndirectionTarget` should filter the members that can't call indirectly by default.
-* Fixed #20: Indirection stub settings for the instance method of an internal class generates build errors.
-
-
 About more previous versions, please see https://github.com/urasandesu/Prig/releases.
     </releaseNotes>
     <dependencies>
@@ -84,18 +75,12 @@ About more previous versions, please see https://github.com/urasandesu/Prig/rele
     </dependencies> 
   </metadata>
   <files>
-    <file src="..\Release(.NET 3.5)\AnyCPU\Urasandesu.NAnonym.v2.0.50727.v0.2.0.0.MSIL.dll" target="lib\net35\" />
-    <file src="..\Release(.NET 3.5)\AnyCPU\Urasandesu.Prig.Framework.v2.0.50727.v0.1.0.0.MSIL.dll" target="lib\net35\" />
-    <file src="..\Release(.NET 3.5)\AnyCPU\Urasandesu.Prig.Delegates.v2.0.50727.v0.1.0.0.MSIL.dll" target="lib\net35\" />
-    <file src="..\Release(.NET 3.5)\AnyCPU\Urasandesu.Prig.Delegates.0404.v2.0.50727.v0.1.0.0.MSIL.dll" target="lib\net35\" />
-    <file src="..\Release(.NET 3.5)\AnyCPU\Urasandesu.Prig.Delegates.0804.v2.0.50727.v0.1.0.0.MSIL.dll" target="lib\net35\" />
-    <file src="..\Release(.NET 3.5)\AnyCPU\Urasandesu.Prig.Delegates.1205.v2.0.50727.v0.1.0.0.MSIL.dll" target="lib\net35\" />
-    <file src="..\Release(.NET 4)\AnyCPU\Urasandesu.NAnonym.v4.0.30319.v0.2.0.0.MSIL.dll" target="lib\net40\" />
-    <file src="..\Release(.NET 4)\AnyCPU\Urasandesu.Prig.Framework.v4.0.30319.v0.1.0.0.MSIL.dll" target="lib\net40\" />
-    <file src="..\Release(.NET 4)\AnyCPU\Urasandesu.Prig.Delegates.v4.0.30319.v0.1.0.0.MSIL.dll" target="lib\net40\" />
-    <file src="..\Release(.NET 4)\AnyCPU\Urasandesu.Prig.Delegates.0404.v4.0.30319.v0.1.0.0.MSIL.dll" target="lib\net40\" />
-    <file src="..\Release(.NET 4)\AnyCPU\Urasandesu.Prig.Delegates.0804.v4.0.30319.v0.1.0.0.MSIL.dll" target="lib\net40\" />
-    <file src="..\Release(.NET 4)\AnyCPU\Urasandesu.Prig.Delegates.1205.v4.0.30319.v0.1.0.0.MSIL.dll" target="lib\net40\" />
+    <file src="..\Release\AnyCPU\Urasandesu.NAnonym.dll" target="lib" />
+    <file src="..\Release\AnyCPU\Urasandesu.Prig.Framework.dll" target="lib" />
+    <file src="..\Release\AnyCPU\Urasandesu.Prig.Delegates.dll" target="lib" />
+    <file src="..\Release\AnyCPU\Urasandesu.Prig.Delegates.0404.dll" target="lib" />
+    <file src="..\Release\AnyCPU\Urasandesu.Prig.Delegates.0804.dll" target="lib" />
+    <file src="..\Release\AnyCPU\Urasandesu.Prig.Delegates.1205.dll" target="lib" />
     <file src="..\Release\x86\Prig.vsix" target="tools" />
     <file src="..\NUnitTestAdapter\package\*.nupkg.hedge" target="tools" />
     <file src="..\Release\x64\Urasandesu.Prig.dll" target="tools\x64\" />
