--- a/Urasandesu.Prig.Delegates.0404/Urasandesu.Prig.Delegates.0404.csproj
+++ b/Urasandesu.Prig.Delegates.0404/Urasandesu.Prig.Delegates.0404.csproj
@@ -8,6 +8,8 @@
     <OutputType>Library</OutputType>
     <AppDesignerFolder>Properties</AppDesignerFolder>
     <RootNamespace>Urasandesu.Prig.Delegates</RootNamespace>
+    <AssemblyName>Urasandesu.Prig.Delegates.0404</AssemblyName>
+    <TargetFrameworkVersion>v3.5</TargetFrameworkVersion>
     <FileAlignment>512</FileAlignment>
   </PropertyGroup>
   <PropertyGroup>
@@ -16,49 +18,23 @@
   <PropertyGroup>
     <AssemblyOriginatorKeyFile>Urasandesu.Prig.Delegates.snk</AssemblyOriginatorKeyFile>
   </PropertyGroup>
-  <PropertyGroup Condition="'$(Configuration)|$(Platform)' == 'Debug%28.NET 3.5%29|AnyCPU'">
+  <PropertyGroup Condition="'$(Configuration)|$(Platform)' == 'Debug|AnyCPU'">
     <DebugSymbols>true</DebugSymbols>
-    <OutputPath>..\Debug%28.NET 3.5%29\AnyCPU\</OutputPath>
-    <DefineConstants>DEBUG;TRACE;_NET_3_5</DefineConstants>
+    <OutputPath>..\Debug\AnyCPU\</OutputPath>
+    <DefineConstants>DEBUG;TRACE</DefineConstants>
     <DebugType>full</DebugType>
     <PlatformTarget>AnyCPU</PlatformTarget>
     <ErrorReport>prompt</ErrorReport>
     <CodeAnalysisRuleSet>MinimumRecommendedRules.ruleset</CodeAnalysisRuleSet>
-    <AssemblyName>Urasandesu.Prig.Delegates.0404.v2.0.50727.v0.1.0.0.MSIL</AssemblyName>
-    <TargetFrameworkVersion>v3.5</TargetFrameworkVersion>
   </PropertyGroup>
-  <PropertyGroup Condition="'$(Configuration)|$(Platform)' == 'Release%28.NET 3.5%29|AnyCPU'">
-    <OutputPath>..\Release%28.NET 3.5%29\AnyCPU\</OutputPath>
-    <DefineConstants>TRACE;_NET_3_5</DefineConstants>
+  <PropertyGroup Condition="'$(Configuration)|$(Platform)' == 'Release|AnyCPU'">
+    <OutputPath>..\Release\AnyCPU\</OutputPath>
+    <DefineConstants>TRACE</DefineConstants>
     <Optimize>true</Optimize>
     <DebugType>pdbonly</DebugType>
     <PlatformTarget>AnyCPU</PlatformTarget>
     <ErrorReport>prompt</ErrorReport>
     <CodeAnalysisRuleSet>MinimumRecommendedRules.ruleset</CodeAnalysisRuleSet>
-    <AssemblyName>Urasandesu.Prig.Delegates.0404.v2.0.50727.v0.1.0.0.MSIL</AssemblyName>
-    <TargetFrameworkVersion>v3.5</TargetFrameworkVersion>
-  </PropertyGroup>
-  <PropertyGroup Condition="'$(Configuration)|$(Platform)' == 'Debug%28.NET 4%29|AnyCPU'">
-    <DebugSymbols>true</DebugSymbols>
-    <OutputPath>..\Debug%28.NET 4%29\AnyCPU\</OutputPath>
-    <DefineConstants>DEBUG;TRACE;_NET_4</DefineConstants>
-    <DebugType>full</DebugType>
-    <PlatformTarget>AnyCPU</PlatformTarget>
-    <ErrorReport>prompt</ErrorReport>
-    <CodeAnalysisRuleSet>MinimumRecommendedRules.ruleset</CodeAnalysisRuleSet>
-    <AssemblyName>Urasandesu.Prig.Delegates.0404.v4.0.30319.v0.1.0.0.MSIL</AssemblyName>
-    <TargetFrameworkVersion>v4.0</TargetFrameworkVersion>
-  </PropertyGroup>
-  <PropertyGroup Condition="'$(Configuration)|$(Platform)' == 'Release%28.NET 4%29|AnyCPU'">
-    <OutputPath>..\Release%28.NET 4%29\AnyCPU\</OutputPath>
-    <DefineConstants>TRACE;_NET_4</DefineConstants>
-    <Optimize>true</Optimize>
-    <DebugType>pdbonly</DebugType>
-    <PlatformTarget>AnyCPU</PlatformTarget>
-    <ErrorReport>prompt</ErrorReport>
-    <CodeAnalysisRuleSet>MinimumRecommendedRules.ruleset</CodeAnalysisRuleSet>
-    <AssemblyName>Urasandesu.Prig.Delegates.0404.v4.0.30319.v0.1.0.0.MSIL</AssemblyName>
-    <TargetFrameworkVersion>v4.0</TargetFrameworkVersion>
   </PropertyGroup>
   <ItemGroup>
     <Reference Include="System" />
